[package]
name = "neohub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = "0.3"
native-tls = "0.2"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
