[package]
name = "neohub"
version = "0.2.0"

description = "Heatmiser neoHub v3 API client (websocket/token aware)"
repository = "https://github.com/FauxFaux/neohub"
readme = "README.md"
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"

edition = "2021"

[dependencies]
anyhow = "1"
futures-util = "0.3"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }

[dev-dependencies]
pretty_env_logger = "0.4"
rustyline = "10"
zstd = "0.11"
